Factor nth_value WholeResultSet state-reset into clearState helper
NthValueOverWholeResultSetFunction.reset() and toTop() carry identical
three-line bodies that zero count, isFound, and value. Moving the
shared work into a private clearState() helper has two effects:

- The state-reset lines now live in one place, called from both
  lifecycle hooks, which keeps reset() and toTop() in lockstep without
  the repetition risk.
- Because reset() is reachable through cursor close (and is therefore
  covered by every test that exercises this TWO_PASS class), the
  field-reset lines fold into a covered method. toTop() itself remains
  unreachable in current dispatch -- CachedWindowRecordCursor rewinds
  recordChain but never calls function.toTop() -- so its three
  remaining lines (super.toTop, clearState, closing brace) stay
  uncovered as defensive code for a future routing change.

Also picks up a Math.max(0, Math.min(...)) -> Math.clamp(...) cleanup
in OverRowsFrameFunction.computeNext and
OverPartitionRowsFrameFunction.computeNext that landed via the
formatter.

JaCoCo line coverage rises from 94.6 to 94.9 percent (Long) and 94.7
to 95.0 percent (Timestamp). All WindowFunctionTest cases pass.