@@ -823,7 +823,7 @@ public class NthValueLongWindowFunctionFactory extends AbstractWindowFunctionFac
             if (frameIncludesCurrentValue) {
                 currentFrameSize = Math.min(effectiveCount, frameSize);
             } else {
-                currentFrameSize = Math.max(0, Math.min(count + 1 - excludeCount, frameSize));
+                currentFrameSize = Math.clamp(count + 1 - excludeCount, 0, frameSize);
             }
 
             if (currentFrameSize > 0 || (count == 0 && frameIncludesCurrentValue)) {
@@ -1257,7 +1257,7 @@ public class NthValueLongWindowFunctionFactory extends AbstractWindowFunctionFac
             if (frameIncludesCurrentValue) {
                 currentFrameElements = Math.min(effectiveCount, frameSize);
             } else {
-                currentFrameElements = Math.max(0, Math.min(count + 1 - excludeCount, frameSize));
+                currentFrameElements = Math.clamp(count + 1 - excludeCount, 0, frameSize);
             }
 
             if (currentFrameElements > 0 || (count == 0 && frameIncludesCurrentValue)) {
@@ -1640,9 +1640,7 @@ public class NthValueLongWindowFunctionFactory extends AbstractWindowFunctionFac
         @Override
         public void reset() {
             super.reset();
-            count = 0;
-            isFound = false;
-            value = Numbers.LONG_NULL;
+            clearState();
         }
 
         @Override
@@ -1655,6 +1653,10 @@ public class NthValueLongWindowFunctionFactory extends AbstractWindowFunctionFac
         @Override
         public void toTop() {
             super.toTop();
+            clearState();
+        }
+
+        private void clearState() {
             count = 0;
             isFound = false;
             value = Numbers.LONG_NULL;
